Add JAX-RS + Jetty