@@ -13,13 +13,24 @@ sourceCompatibility = 1.9
 
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.25'
-    compile 'org.slf4j:slf4j-log4j12:1.7.25'
-    compile 'log4j:log4j:1.2.17'
-//    compile 'ch.qos.logback:logback-classic:1.2.3'
+    compile(
+            'org.slf4j:slf4j-api:1.7.25',
+            'org.slf4j:slf4j-log4j12:1.7.25',
+            'log4j:log4j:1.2.17',
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.19.0'
+            // JAX-RS + Embedded Jetty
+            'org.glassfish.jersey.core:jersey-server:2.27',
+            'org.glassfish.jersey.containers:jersey-container-servlet:2.27',
+            'org.glassfish.jersey.media:jersey-media-json-jackson:2.27',
+            'org.glassfish.jersey.inject:jersey-hk2:2.27',
+            'org.eclipse.jetty:jetty-server:9.4.12.v20180830',
+            'org.eclipse.jetty:jetty-servlet:9.4.12.v20180830',
+    )
+
+    testCompile(
+            'junit:junit:4.12',
+            'org.mockito:mockito-core:2.19.0',
+    )
 }
 
 
@@ -33,8 +44,8 @@ publishing {
         maven {
             url "https://maven-internal/path/to/${version.endsWith('-SNAPSHOT') ? 'snapshots' : 'releases'}"
             credentials {
-                username = MAVEN_INTERNAL_USERNAME  // from ~/.gradle/gradle.properties
-                password = MAVEN_INTERNAL_PASSWORD  // from ~/.gradle/gradle.properties
+                username = ''
+                password = ''
             }
         }
     }
@@ -48,11 +59,14 @@ publishing {
 }
 
 
-// javadoc {
-//     doFirst {
-//         options.addStringOption('-add-modules', 'java.xml.bind')
-//     }
-// }
+compileJava {
+    options.compilerArgs = ['--add-modules', 'java.xml.bind']
+}
+
+
+javadoc {
+    options.addStringOption('-add-modules', 'java.xml.bind')
+}
 
 
 task bundle(type: Jar) {
